k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-deployment
  labels:
    app: nest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nest
  template:
    metadata:
      labels:
        app: nest
    spec:
      containers:
        - name: nest-container
          image: ammaralshari/streammix-backend
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nest-service
spec:
  type: NodePort
  selector:
    app: nest
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30010
