k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ingress
  annotations:
    # Tell Nginx Ingress to send no-cache headers to the browser
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($request_uri ~* \.(html)$) {
        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
        expires -1;
      }
spec:
  rules:
    - host: streammix.com
      http:
        paths:
          - path: /user # ← specific first
            pathType: Prefix
            backend:
              service:
                name: nest-service
                port:
                  number: 3000
          - path: / # ← general last
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 80
